2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyperl.el
	(top level): New feature. There is menu entry to Lint the Perl
	code in buffer using module Perl::Critic; which needs to be installed
	separately.
	(tinyperl-lint-perl-critic): New.
	(tinyperl-:lint-buffer-name): New.
	(tinyperl-:lint-default-file-name): New.
	(tinyperl-:lint-severity): New.
	(tinyperl-:lint-hook): New.

	* tiny/tinycompile.el
	(tinycompile-parse-line-goto-guess): New.
	(tinycompile-parse-line-goto-basic): Rename. Was
	`tinycompile-parse-line-goto'.
	(tinycompile-parse-line-goto-main): New.
	(tinycompile-parse-line-goto-basic): Add check to `current-local-map'.

	* tiny/tinyliba.el (ti::buffer-parse-line-col): New.

	* tiny/tinylib.el (ti::buffer-parse-line-col): New.

2010-04-13 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyadvice.el: (DOC::Install): Improve documentation.
	(top level): remove all folding.el marks.

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-ask-bug):
	Prefer taking bug number from current line before looking at mail
	headers.
	(tinydebian-bts-mail-ctrl-remove-package-ask): Add 'RM' type.
	(tinydebian-bts-mail-ctrl-remove-package): Update docstring to
	include RM, ROP.
	(tinydebian-:usertag-email-list): New.
	(tinydebian-bts-mail-ctrl-usertag): add new arg `email'. Use
	`tinydebian-:usertag-email-list'.
	(tinydebian-:usertag-email-list): Add DEBEMAIL.
	(tinydebian-bts-mail-ctrl-usertag): Do not add EOL whitespace at
	the end of Subject if tag-string is nil.

2010-03-31 Wed  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-command-show-wnpp-alert): sort
	* displayed lines.

2010-03-30 Tue  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-mail-mode-debian-address-ask-bug):
	Add many more bug detection methods.

2010-03-27 Sat  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyeat.el (tinyeat-install-default-bindings): Change
	direction of delete. The key M-DEL now delete forward, not